Fixed the styles for cases when the admin bar is visible
Previously there was some ambiguity in the styles depending
on wheter browser styles were reset or not, this change
addresses that by explicitly stating the margin size for
the h3 header. Plus, the visible admin bar adds a class to
the feedback form container to increase the container padding.

--- a/css/feedback-form.css
+++ b/css/feedback-form.css
@@ -25,6 +25,10 @@ body.draftfeedback {
 	background: #f4f8fa;
 }
 
+.draftfeedback-admin-bar {
+	padding-top: 62px;
+}
+
 .draftfeedback-container * {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
@@ -34,7 +38,7 @@ body.draftfeedback {
 .draftfeedback-container h3 {
 	font-weight: normal;
 	font-size: 20px;
-	margin-bottom: 15px;
+	margin: 0 0 15px 0;
 }
 
 .draftfeedback-container p {
